playing with css of home/logout on map page

--- a/client/style.css
+++ b/client/style.css
@@ -55,8 +55,8 @@
   color: white;
   margin: 10px;
   border-radius: 5px;
-  wide: 80%;
-  background-color: #6496c8;
+  /*wide: 80%;*/
+ /* background-color: #6496c8;*/
 }
 
 .create {
@@ -66,8 +66,8 @@
   color: white;
   margin: 10px;
   border-radius: 5px;
-  wide: 80%;
-  background-color: #6496c8;
+  /*wide: 80%;*/
+ /* background-color: #6496c8;*/
 }
 
 #bodyContent {
