"changed color on home and logout"

--- a/client/style.css
+++ b/client/style.css
@@ -52,7 +52,7 @@
   font-size: 30px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  color: white;
+  color: #0064cc;
   margin: 10px;
   border-radius: 5px;
   /*wide: 80%;*/
@@ -63,7 +63,7 @@
   font-size: 30px;
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  color: white;
+  color: #0064cc;
   margin: 10px;
   border-radius: 5px;
   /*wide: 80%;*/
