--- a/client/style.css
+++ b/client/style.css
@@ -70,10 +70,10 @@
   /*background-color: #6496c8;*/
 }
 
-.chatLog {
-  margin-top: 3.5em;
+.chatlog {
+  margin-top: 4em;
 }
-.chatLog ul{
+.chatlog ul{
   border: solid 1px #eee;
 }
 
