changed all logout buttone to images

--- a/client/style.css
+++ b/client/style.css
@@ -45,11 +45,11 @@
   color: white;
 }
 
-.logout {
+/*.navbar .nav li .logout {
   font-size: 20px;
   width: 100%;
 }
-
+*/
 .map {
   height: 100%;
 }
